fixed spacing issues 2

--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ header{
     background-color: #575989;
     /* background-color: #20075f; */
     justify-content: space-between;
-    padding: 80px 40px;
+    padding: 100px 40px;
 }
 .helpContainer{
 width: 40%;
